<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/teal_700"
    tools:context=".forgotPassword">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/myChittiHeadingForgotPassword"
        android:layout_width="268dp"
        android:layout_height="85dp"
        android:gravity="center"
        android:text="@string/mychitti"
        android:textColor="#FF018786"
        android:textFontWeight="@integer/material_motion_duration_long_1"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/forgot_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/forgot_password1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myChittiHeadingForgotPassword" />

    <TextView
        android:id="@+id/enter_your_registered_email_id_to_reset_the_password"
        android:layout_width="310dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/enter_your_registered_email_id_to_reset_the_password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password1" />

    <Button
        android:id="@+id/resetPasswordButtonForgotPasswordActivity"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/re_set_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailIDForgotPasswordActivity"
        app:shapeAppearance="@style/Circular"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/emailIDForgotPasswordActivity"
        android:layout_width="302dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input_edit_text"
        android:drawableEnd="@drawable/custom_ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_registered_email_id_to_reset_the_password"
        tools:ignore="TextContrastCheck,TextFields" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>